# FORGE

./: .gitignore  .opencode.json  CMakeLists.txt  CMakeLists_wasm.txt  GUIDE.md  LICENSE  README.md  build_all_packages.sh  build_linux_package.sh  forge-lang_1.0.0_amd64.deb  forge_installer.nsi  generate_icon.py  install_linux.sh  package_all.sh
.github/workflows/: ci.yml
.opencode/: opencode.db-shm  opencode.db-wal
benchmarks/: run_all.fge
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  forge
build-release/tools/: Makefile  cmake_install.cmake  forge-debug  forge-format  forge-lint
examples/: medium.fge  sdl_demo.fge  simple.fclass  test_all.fge  test_class.fge  test_dog_only2.fge  test_dog_then_puppy.fge  test_inherit.fge  test_inherit2.fge  test_two_classes.fge  test_v2_1.fge
ide/: CMakeLists.txt
ide-forge/: .forge-studio-config  ForgeLists.txt  forge-studio
ide-forge-cpp/: CMakeLists.txt
ide-forge-cpp/src/: theme.hpp
ide-forge/src/: editor.fge  fs.fge  main.fge  os.fge  repl.fge  syntax.fge  terminal.fge  theme.fge  ui.fge
ide/src/: editor.cpp  editor.hpp  file_explorer.cpp  file_explorer.hpp  main.cpp  repl.cpp  repl.hpp  syntax.cpp  syntax.hpp  terminal.cpp  terminal.hpp  theme.cpp  theme.hpp
lib/stdlib/: datetime.fge  math.fge  strings.fge
lib/ui/: components.fge  editor.fge  file_explorer.fge  mod.fge  native.fge  pkg_manager.fge  repl.fge  syntax.fge  theme.fge  ui.fge
src/: ast.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  forge_build.cpp  forge_build.hpp  forgevm_main.cpp  lexer.cpp  lexer.hpp  main.cpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  pkg_main.cpp  pkg_manager.cpp  pkg_manager.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
src/fvm/: actors.cpp  actors.hpp  classfile.cpp  classfile.hpp  faw.cpp  faw.hpp  ffi.cpp  ffi.hpp  forge_compute.cpp  forge_compute.hpp  forge_ide.cpp  forge_ide.hpp  gguf_loader.cpp  gguf_loader.hpp  hf_converter.cpp  hf_converter.hpp  hip_runtime.hpp  llm.cpp  llm.hpp  runtime.cpp  runtime.hpp  sdl2_ui.cpp  sdl2_ui.hpp  sdl_fvm_ui.cpp  typechecker.hpp
src/jit/: forge_jit.cpp  forge_jit.hpp
src/lsp/: forge_lsp.cpp  forge_lsp.hpp  forge_lsp_main.cpp
src/wasm/: forge_wasm.cpp  forge_wasm.hpp
tests/: test_all_tools.fge  test_core.fge  test_faw_agent.fge  test_faw_simple.fge  test_for.fge  test_gen2.fge  test_gen_debug.fge  test_gguf.fge  test_logits.fge  test_lora_agent.fge  test_minimal.fge  test_nh2_minimal.fge  test_nh2coder.fge  test_nh2coder2.fge  test_split.fge  test_tool_nh2.fge  train_tool_calling.fge
tools/: CMakeLists.txt  docgen.cpp  forge-debug.cpp  format.cpp  linter.cpp
